--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -9,9 +9,11 @@ env = DJANGO_SETTINGS_MODULE=fileship.settings
 
 master = true
 
-processes = 4
+processes = 8
 
-threads = 2
+threads = 8
+
+socket-timeout = 3600
 
 home = ./venv
 
